--- a/AndroidProject/app/src/main/res/values/styles.xml
+++ b/AndroidProject/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="MyText" parent="@android:style/TextAppearance">
+        <item name="android:textColor">#0C0B0B</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:background">#FFDDCECE</item>
+    </style>
+
 </resources>
