--- a/AndroidProject/app/src/main/res/layout/fragment_details.xml
+++ b/AndroidProject/app/src/main/res/layout/fragment_details.xml
@@ -3,105 +3,64 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="400dp">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <ImageView
+        android:id="@+id/ContactDetailPhoto"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_weight="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_gallery" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+    <TextView
+        android:id="@+id/ContactDetailName"
+        style="@style/MyText"
+        android:layout_width="235dp"
+        android:layout_height="114dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/name"
+        android:paddingLeft="8dp"
+        android:paddingTop="25dp"
+        app:layout_constraintStart_toEndOf="@+id/ContactDetailPhoto"
+        app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="336dp"
-                android:layout_height="150dp"
-                android:layout_weight="1"
-                app:srcCompat="@android:drawable/ic_menu_gallery" />
+    <TextView
+        android:id="@+id/ContactDetailPhone"
+        style="@style/MyText"
+        android:layout_width="373dp"
+        android:layout_height="23dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/phone"
+        android:paddingLeft="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ContactDetailPhoto" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="20dp"
-                android:layout_weight="1"
-                android:background="#FFDDCECE"
-                android:orientation="horizontal">
+    <TextView
+        android:id="@+id/ContactDetailEmail"
+        style="@style/MyText"
+        android:layout_width="373dp"
+        android:layout_height="23dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/email"
+        android:paddingLeft="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ContactDetailPhone" />
 
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="40dp"
-                    style="@style/MyText"
-                    android:text="@string/name"
-                    android:textAlignment="viewStart" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="28dp"
-                android:layout_marginRight="20dp"
-                android:layout_weight="1"
-                android:paddingLeft="10dp"
-                android:text="@string/phone"
-                style="@style/MyText" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="28dp"
-                android:layout_marginRight="20dp"
-                android:layout_weight="1"
-                android:paddingLeft="10dp"
-                android:text="@string/email"
-                style="@style/MyText" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginTop="8dp"
-
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="28dp"
-                android:layout_marginRight="20dp"
-                android:layout_weight="1"
-                android:paddingLeft="10dp"
-                android:text="@string/notes"
-                style="@style/MyText" />
-        </LinearLayout>
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/ContactDetailNotes"
+        style="@style/MyText"
+        android:layout_width="373dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/notes"
+        android:paddingLeft="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ContactDetailEmail" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
