--- a/AndroidProject/app/src/main/res/layout/fragment_details.xml
+++ b/AndroidProject/app/src/main/res/layout/fragment_details.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="400dp">
@@ -8,59 +7,71 @@
 
     <ImageView
         android:id="@+id/ContactDetailPhoto"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
         android:layout_height="150dp"
-        android:layout_weight="1"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_gallery" />
 
     <TextView
         android:id="@+id/ContactDetailName"
-        style="@style/MyText"
-        android:layout_width="235dp"
-        android:layout_height="114dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/name"
-        android:paddingLeft="8dp"
+        style="@style/MyTextMarginPadding"
+        android:layout_width="0dp"
+        android:layout_height="115dp"
         android:paddingTop="25dp"
+        android:text="@string/name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/ContactDetailPhoto"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/ContactDetailPhone"
-        style="@style/MyText"
-        android:layout_width="373dp"
-        android:layout_height="23dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
+        style="@style/MyTextMarginPadding"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:text="@string/phone"
-        android:paddingLeft="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ContactDetailPhoto" />
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
 
     <TextView
         android:id="@+id/ContactDetailEmail"
-        style="@style/MyText"
-        android:layout_width="373dp"
-        android:layout_height="23dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
+        style="@style/MyTextMarginPadding"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:text="@string/email"
-        android:paddingLeft="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.421"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ContactDetailPhone" />
 
     <TextView
         android:id="@+id/ContactDetailNotes"
-        style="@style/MyText"
-        android:layout_width="373dp"
+        style="@style/MyTextMarginPadding"
+        android:layout_width="0dp"
         android:layout_height="80dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
         android:text="@string/notes"
-        android:paddingLeft="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ContactDetailEmail" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="150dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="150dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
