--- a/AndroidProject/app/src/main/res/layout/fragment_details.xml
+++ b/AndroidProject/app/src/main/res/layout/fragment_details.xml
@@ -21,7 +21,7 @@
         style="@style/MyTextMarginPadding"
         android:layout_width="0dp"
         android:layout_height="115dp"
-        android:text="@string/name"
+        android:paddingTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/ContactDetailPhoto"
@@ -32,7 +32,6 @@
         style="@style/MyTextMarginPadding"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/phone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +42,6 @@
         style="@style/MyTextMarginPadding"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.421"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +52,6 @@
         style="@style/MyTextMarginPadding"
         android:layout_width="0dp"
         android:layout_height="80dp"
-        android:text="@string/notes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ContactDetailEmail" />
